2007-12-31  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm: Make simple-selector-sequence-matching
	an independent function.

2007-12-31  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm (AUTOLOAD): Getter for attributes
	reflecting CSS property is implemented.
	(css_text): Getter is implemented.

2007-12-24  Wakaba  <wakaba@suika.fam.cx>

	* CSSRule.pm (selector_text): Ad hoc support for namespace prefixes.
	(CSSNamespaceRule.css_text): Getter implemented.

	* CSSStyleSheet.pm (manakai_is_default_namespace,
	manakai_lookup_namespace_prefix): New methods.

2007-12-23  Wakaba  <wakaba@suika.fam.cx>

	* CSSRule.pm (@charset.css_text): Implemented.

2007-12-23  Wakaba  <wakaba@suika.fam.cx>

	* CSSRule.pm (type, css_text): Typo fixed.
	(____new): s/_selector/_selectors/g;
	(CSSStyleRule.css_text, selectors_text): Ad hoc implementation.

	* CSSStyleDeclaration.pm (css_text): Ad hoc implementation.

	* CSSStyleSheet.pm (new): s/new/____new/.
	(css_text): New attribute.

2007-12-22  Wakaba  <wakaba@suika.fam.cx>

	* MediaList.pm: New placeholder for a CSSOM interface.

	* CSSRule.pm, CSSStyleSheet.pm: Implementing the initial
	setting of owner* and parent* attributes; support
	for the |delete_rule| method.

2007-12-22  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleSheet.pm, CSSRule.pm, CSSRuleList.pm, CSSStyleDeclaration.pm:
	First version of CSSOM implementation.

2007-11-18  Wakaba  <wakaba@suika.fam.cx>

	* Document.pm, Entity.pm (manakai_has_bom,
	manakai_charset): New attributes.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* Document.pm, Element.pm (inner_html): Use |Whatpm::HTML::Serializer|
	for getter.

2007-10-27  Wakaba  <wakaba@suika.fam.cx>

	* Event.pm (init_event, init_event_ns, init_custom_event_ns): 
	The |namespaceURI| attribute was not set correctly.

	* DOMEvents.dis: Removed.

2007-10-08  Wakaba  <wakaba@suika.fam.cx>

	* Event.pm, EventTarget.pm, EventTargetNode.pm,
	EventException.pm: Implemented (but not tested!).
