@@ -1,5 +1,10 @@
 2007-12-31  Wakaba  <wakaba@suika.fam.cx>
 
+	* SelectorsAPI.pm, Document.pm (___query_selector_all): New internal
+	method.
+
+2007-12-31  Wakaba  <wakaba@suika.fam.cx>
+
 	* SelectorsAPI.pm: Make simple-selector-sequence-matching
 	an independent function.
 
